<resources>
    <string name="app_name">QuizFitter</string>
    <string name="menu_home">Home</string>
    <string name="menu_gym">Training</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_play">Play</string>
    <string name="menu_food">Food</string>
    <string name="food">Food</string>
    <string name="menu_bmi">BMI Calculator</string>
    <string name="menu_camera">Exercise recognition</string>
    <string name="menu_log_out">Disconnect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise_name">Exercise name: </string>
    <string name="difficulty">Difficulty</string>
    <string name="check_password">Check password</string>
    <string name="create">Done</string>
    <string name="sets">Sets: </string>
    <string name="repetitions">Repetitions: </string>
    <string name="training_day">Training day:</string>
    <string name="login">Sign in</string>
    <string name="start">START</string>
    <string name="username">Username</string>
    <string name="new_account">New account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="add">Add</string>
    <string name="protein">Protein</string>
    <string name="carbohydrates">Carbs</string>
    <string name="fat">Fat</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="food_name">Food name</string>
    <string name="calories">calories</string>
    <string name="calories_upper">Calories</string>
    <string name="quantity_gr">Quantity(gr.)</string>
    <string name="carbs">Carbs</string>
    <string name="today_s_list">Today\'s list</string>
    <string name="delete_account">Delete account</string>
    <string name="category">Category:</string>
    <string name="category2">Category</string>
    <string name="see_chart">See chart</string>
    <string name="enter_password">Enter password</string>
    <string name="or">-----OR-----</string>
    <string name="name">Name</string>
    <string name="forgot_password2">forgot password?</string>
    <string name="send">Send</string>
    <string name="weight">Weight</string>
    <string name="bodyfat">Bodyfat</string>
    <string name="save">Save</string>
    <string name="admin">Admin</string>
    <string name="body_data">Body data</string>
    <string name="date">Date</string>
    <string name="looking_for_a_match">Looking for a match</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="results">Results:</string>
    <string name="classify">Classify</string>
    <string name="cancel">Cancel</string>
    <string name="finding_exercise">Finding exercise</string>
    <string name="exercise">Exercise</string>
    <string name="details">Details</string>
    <string name="hello">Hi there fit person</string>
    <string name="feedback">We would love if you could give us some feedback </string>
    <string name="wrong">No</string>
    <string name="correct">Yes</string>
    <string name="send_feedback">Send feedback</string>
    <string name="hint_text">Exercise name</string>
    <string name="was_exercise">Was the exercise classification right?</string>
    <string name="quizfitter">QuizFitter</string>
    <string name="looking_for_an_opponent">Looking for an opponent</string>
    <string name="finding_your_exercise">Finding your exercise</string>
    <string name="back">Back</string>
    <string name="sign_in">SIGN IN</string>
    <string name="menu_account">Account</string>
    <string name="play">Play</string>
    <string name="camera">Camera</string>
    <string name="quiz">Quiz</string>
    <string name="wins">wins</string>
    <string name="exercises">exercises</string>
    <string name="search_here">Search here</string>
    <string name="meals">Meals</string>
    <string name="this_week">This week</string>
    <string name="delete">delete</string>
    <string name="new_meal">New meal</string>
    <string name="meal_name">Meal name</string>
    <string name="choose_training_days">Choose training days</string>
    <string name="choose_exercise_category">Choose exercise category</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="legs">Legs</string>
    <string name="calisthenics">Calisthenics</string>
    <string name="weights">Weights</string>
    <string name="machine">Machine</string>
    <string name="powerlifting">Powerlifting</string>
    <string name="cardio">Cardio</string>
    <string name="recover_password">Recover password</string>
    <string name="daily_body_data">Daily body data</string>
    <string name="expand">Expand</string>
    <string name="default_exercises_number">16</string>
    <string name="calories_consumed">10000</string>
    <string name="games_won">100</string>

</resources>
