<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person_24px"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_body_data"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/body_data" />
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/videogame_asset_24px"
            android:title="@string/menu_play" />
        <item
            android:id="@+id/nav_gym"
            android:icon="@drawable/fitness_center_24px"
            android:title="@string/menu_gym" />

        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/fastfood_24px"
            android:title="@string/menu_food" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/camera_alt_24px"
            android:title="@string/menu_camera" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/highlight_off_24px"
            android:title="@string/menu_log_out" />

    </group>

</menu>
