<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/feedback_background"
    tools:context="com.luceafarul.quizfitter.view.classification.tabfragments.FeedbackTabFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/hello"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorOnPrimary"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/feedback"
            android:textColor="@color/colorOnPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHello" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFeedback">

            <TextView
                android:id="@+id/tvWasExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/was_exercise"
                android:textColor="@color/colorDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:tag="right"
                    android:text="@string/correct"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbWrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:tag="wrong"
                    android:text="@string/wrong"
                    android:textSize="18sp" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/tilExercise"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                android:hint="@string/hint_text">

                <AutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_marginTop="20dp"
                style="@style/FeedbackMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/DefaultMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
