<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fq_background"
    tools:context=".view.users.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="128dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/DefaultTextInputLayout"
            android:hint="@string/e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/DefaultTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/DefaultTextInputLayout"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etParola"
                style="@style/DefaultTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgot"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="end"
            android:text="@string/forgot_password2"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/DefaultMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdmin"
            style="@style/SuccessMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdmin2"
            style="@style/SuccessMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="admin 2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/or"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/DefaultMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/new_account" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--    <com.google.android.material.button.MaterialButton-->
    <!--        android:id="@+id/btnRegister"-->
    <!--        style="@style/DefaultMaterialButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="32dp"-->
    <!--        android:layout_marginBottom="64dp"-->
    <!--        android:text="@string/new_account"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>