<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luceafarul.quizfitter.view.training.ExercisesListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFilter"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/food_search_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0.87"
            android:text="@string/choose_training_days"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/colorSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            app:chipSpacingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPush"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:chipSurfaceColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPull"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pull"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:checkedIconEnabled="true"
                app:chipSurfaceColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLegs"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legs"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:chipIconTint="@color/colorSurface"
                app:chipSurfaceColor="@android:color/transparent" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:alpha="0.87"
            android:text="@string/choose_exercise_category"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/colorSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="160dp"
            app:chipSpacingHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCalisthenics"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calisthenics"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:chipSurfaceColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weights"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:chipSurfaceColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:chipSurfaceColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardio"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:chipIconTint="@color/colorSurface"
                app:chipSurfaceColor="@android:color/transparent" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powerlifting"
                android:textColor="@color/colorSurface"
                app:checkedIcon="@drawable/ic_check_white_24dp"
                app:chipIconTint="@color/colorSurface"
                app:chipSurfaceColor="@android:color/transparent" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>
